# tr-viewer

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  api.ts  bindings.ts  types.d.ts
src-tauri/: Cargo.toml  installer_custom.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  dir.rs  lib.rs  main.rs  models.rs  path_ext.rs  system_time_ext.rs
src/assets/: main-pane.css  resizer.css
src/assets/left/: left-pane.css
src/assets/right/: right-pane.css
src/components/: MainPane.tsx  utils.ts
src/components/left/: LeftContent.tsx  LeftPane.tsx  LeftTop.tsx
src/components/left/contents/: FolderTree.tsx  FolderTreeItem.tsx  tree.ts
src/components/right/: RightContent.tsx  RightPane.tsx  RightTop.tsx
src/components/right/contents/: FileHead.tsx  FileView.tsx  FolderList.tsx  FolderListHead.tsx  FolderListItem.tsx  GalleryList.tsx  GalleryListItem.tsx  ShadowDomWrapper.tsx
src/store/: directoryViewTypeStore.ts  fileViewTypeMapStore.ts  folderListOrderStore.ts  folderListSliderStore.ts  folderListStore.ts  folderListVisibleColsStore.ts  folderTreeRefStore.ts  folderTreeStore.ts  selectedTreeItemStore.ts
