[package]
name = "tr-viewer"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }



[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "unstable", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
tokio = { version = "1.45.1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
moka = { version = "0.12.10", features = ["future"] }
mime_guess = { version = "2.0.5" }
thiserror = "2.0.12"
chardetng = { version = "0.1.17" }
encoding_rs = "0.8.35"
infer = "0.19.0"
dirs-next = "2.0.0"
sysinfo = "0.35.2"
windows = { version = "0.61.1", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta= { version = "2.0.0-rc.21"}
specta-typescript = { version = "0.0.9"}

